!Fix actionbar dropdown clipping and ie width [ADUI-352]

--- a/scss/components/application-container.scss
+++ b/scss/components/application-container.scss
@@ -2,6 +2,6 @@
   margin-top: $header-height;
   margin-left: $navigation-width;
   overflow: hidden;
-
+  min-height: 600px;
   border-top-left-radius: 2px;
 }
